--- a/engine/style.css
+++ b/engine/style.css
@@ -43,7 +43,7 @@ html {
     line-height: 2;
 }
 
-.splash-screen a{
+.splash-screen button{
     background-color: aliceblue;
     color: black;
     width: 100% !important;
