--- a/engine/style.css
+++ b/engine/style.css
@@ -45,7 +45,7 @@ html {
 
 .splash-screen button{
     background-color: aliceblue;
-    color: black;
+    color: rgb(255, 255, 255);
     width: 100% !important;
     height: 60px;
     border-radius: 30px;
@@ -66,15 +66,6 @@ html {
     line-height: 1.1 !important;
 }
 
-.splash-screen button{
-    font-size: 12px;
-    text-transform: uppercase;
-    text-decoration: underline;
-    color: var(--c1light);
-    background-color: transparent !important;
-}
-
-
 .cta{
     display: none;
     position: fixed;
@@ -86,7 +77,7 @@ html {
     bottom: 30px;
 }
 
-.cta a{
+.cta button{
     background-color: #1a1a1a;;
     color: aliceblue;
     width: 100% !important;
